// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull password-policy -D testDir19": should export the password-policy in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull password-policy -D testDir19": should export the password-policy in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull password-policy -D testDir19": should export the password-policy in fr-config-manager style": testDir19/realms/alpha/password-policy/alpha_user-password-policy.json 1`] = `
{
  "_id": "fieldPolicy/alpha_user",
  "defaultPasswordStorageScheme": [
    {
      "_id": "PBKDF2-HMAC-SHA256",
    },
  ],
  "passwordAttribute": "password",
  "resourceCollection": "managed/alpha_user",
  "type": "password-policy",
  "validator": [
    {
      "_id": "alpha_userPasswordPolicy-length-based-password-validator",
      "enabled": true,
      "maxPasswordLength": 0,
      "minPasswordLength": 10,
      "type": "length-based",
    },
    {
      "_id": "alpha_userPasswordPolicy-attribute-value-password-validator",
      "checkSubstrings": true,
      "enabled": true,
      "matchAttribute": [
        "mail",
        "userName",
        "givenName",
        "sn",
      ],
      "minSubstringLength": 5,
      "testReversedPassword": true,
      "type": "attribute-value",
    },
    {
      "_id": "alpha_userPasswordPolicy-character-set-password-validator",
      "allowUnclassifiedCharacters": true,
      "characterSet": [
        "0:abcdefghijklmnopqrstuvwxyz",
        "0:ABCDEFGHIJKLMNOPQRSTUVWXYZ",
        "0:0123456789",
        "0:~!@#$%^&*()-_=+[]{}|;:,.<>/?"'\\\`",
      ],
      "enabled": true,
      "minCharacterSets": 4,
      "type": "character-set",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull password-policy -D testDir19": should export the password-policy in fr-config-manager style": testDir19/realms/bravo/password-policy/bravo_user-password-policy.json 1`] = `
{
  "_id": "fieldPolicy/bravo_user",
  "defaultPasswordStorageScheme": [
    {
      "_id": "PBKDF2-HMAC-SHA256",
    },
  ],
  "passwordAttribute": "password",
  "resourceCollection": "managed/bravo_user",
  "type": "password-policy",
  "validator": [
    {
      "_id": "bravo_userPasswordPolicy-length-based-password-validator",
      "enabled": true,
      "maxPasswordLength": 0,
      "minPasswordLength": 8,
      "type": "length-based",
    },
    {
      "_id": "bravo_userPasswordPolicy-attribute-value-password-validator",
      "checkSubstrings": true,
      "enabled": true,
      "matchAttribute": [
        "mail",
        "userName",
        "givenName",
        "sn",
      ],
      "minSubstringLength": 5,
      "testReversedPassword": true,
      "type": "attribute-value",
    },
    {
      "_id": "bravo_userPasswordPolicy-character-set-password-validator",
      "allowUnclassifiedCharacters": true,
      "characterSet": [
        "1:abcdefghijklmnopqrstuvwxyz",
        "1:ABCDEFGHIJKLMNOPQRSTUVWXYZ",
        "1:0123456789",
        "1:~!@#$%^&*()-_=+[]{}|;:,.<>/?"'\\\`",
      ],
      "enabled": true,
      "type": "character-set",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull password-policy -D testDir20 -r alpha": should export the password-policy in alpha realm in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull password-policy -D testDir20 -r alpha": should export the password-policy in alpha realm in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull password-policy -D testDir20 -r alpha": should export the password-policy in alpha realm in fr-config-manager style": testDir20/realms/alpha/password-policy/alpha_user-password-policy.json 1`] = `
{
  "_id": "fieldPolicy/alpha_user",
  "defaultPasswordStorageScheme": [
    {
      "_id": "PBKDF2-HMAC-SHA256",
    },
  ],
  "passwordAttribute": "password",
  "resourceCollection": "managed/alpha_user",
  "type": "password-policy",
  "validator": [
    {
      "_id": "alpha_userPasswordPolicy-length-based-password-validator",
      "enabled": true,
      "maxPasswordLength": 0,
      "minPasswordLength": 10,
      "type": "length-based",
    },
    {
      "_id": "alpha_userPasswordPolicy-attribute-value-password-validator",
      "checkSubstrings": true,
      "enabled": true,
      "matchAttribute": [
        "mail",
        "userName",
        "givenName",
        "sn",
      ],
      "minSubstringLength": 5,
      "testReversedPassword": true,
      "type": "attribute-value",
    },
    {
      "_id": "alpha_userPasswordPolicy-character-set-password-validator",
      "allowUnclassifiedCharacters": true,
      "characterSet": [
        "0:abcdefghijklmnopqrstuvwxyz",
        "0:ABCDEFGHIJKLMNOPQRSTUVWXYZ",
        "0:0123456789",
        "0:~!@#$%^&*()-_=+[]{}|;:,.<>/?"'\\\`",
      ],
      "enabled": true,
      "minCharacterSets": 4,
      "type": "character-set",
    },
  ],
}
`;
